# task-manager

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/: task.h
include/task-manager/: task.h  task_manager.h
src/: CMakeLists.txt  main.cpp  task.cpp  task_manager.cpp
test/: CMakeLists.txt  task_manager_test.cpp  task_test.cpp
